--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,3 +1,15 @@
+// Let's start with the basics
+$base-color: #7c92ae;
+$base-gradient: 'glossy';
+
+// Lists
+$list-active-gradient: 'bevel';
+$list-header-bg-color: transparentize(saturate($base-color, 10%), .25);
+$list-header-gradient: 'matte';
+
+// Tabs
+$tabs-dark: #111;
+
 @import 'sencha-touch/default/all';
 
 // You may remove any of the following modules that you
@@ -18,3 +30,5 @@
 
 // Your custom code goes here...
 @include pictos-iconmask('list');
+@include pictos-iconmask('compose1');
+@include pictos-iconmask('settings9');
