--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -27,6 +27,7 @@ $tabs-dark: #111;
 @include sencha-carousel;
 @include sencha-form;
 @include sencha-msgbox;
+@include sencha-charts;
 
 // Your custom code goes here...
 @include pictos-iconmask('list');
