apple.sassの内容をコピー

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -33,3 +33,13 @@ $tabs-dark: #111;
 @include pictos-iconmask('list');
 @include pictos-iconmask('compose1');
 @include pictos-iconmask('settings9');
+
+
+.x-toolbar-light .x-title {
+    color: #fff;
+    text-shadow: rgba(0, 0, 0, 0.5) 0 -0.08em 0;
+}
+
+.x-button-back .x-button-label {
+    color: #fff;
+}
