一覧の表示を修正

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -43,3 +43,17 @@ $tabs-dark: #111;
 .x-button-back .x-button-label {
     color: #fff;
 }
+
+.ab-account {
+    padding-right: 1em;
+}
+
+.ab-category-name {
+    color: #333;
+    float: right;
+}
+
+.ab-memo {
+    color: #333;
+    font-size: smaller;
+}
